# WTDKP4C5-S1

./: CMakeLists.txt  README.md  README_CN.md  partitions.csv
components/apps/: CMakeLists.txt  apps.h
components/apps/camera/: app_camera_pipeline.cpp
components/apps/game_2048/: Game_2048.cpp  Game_2048.hpp
components/apps/setting/: Setting.cpp
components/apps/setting/ui/: ui.c  ui.h
components/apps/setting/ui/screens/: ui_ScreenSettingAbout.c  ui_ScreenSettingLight.c  ui_ScreenSettingVerification.c  ui_ScreenSettingVolume.c  ui_ScreenSettingWiFi.c
components/wtdkp4c5_s1_board/: CMakeLists.txt  wtdkp4c5_s1_board.c
components/wtdkp4c5_s1_board/include/bsp/: esp-bsp.h  wtdkp4c5_s1_board.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
